--- a/src/frontend/src/components/MatchSmallCard.scss
+++ b/src/frontend/src/components/MatchSmallCard.scss
@@ -3,9 +3,7 @@
     padding: 10px;
     margin-bottom: 20px;
 
+    .match-result {
+        margin-top: 10px;
+    }
 }
-
-.MatchSmallCard .match-result {
-    margin-top: 10px;
-}
-
