--- a/src/frontend/src/pages/TeamPage.scss
+++ b/src/frontend/src/pages/TeamPage.scss
@@ -17,12 +17,13 @@
 
     .team-name {
         font-size: 4rem;
-        margin-bottom: 20px;
+        margin-bottom: 100px;
+        color: rgb(255, 196, 0);
     }
 
     .win-loss-section {
         justify-self: center;
-        padding: 40px;
+        padding: 20px;
         text-align: center;
     }
 
